--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "element-ui": "^2.4.8",
-    "vue": "^2.5.11"
+    "vue": "^2.5.17",
+    "vue-router": "^3.0.1"
   },
   "browserslist": [
     "> 1%",
